# maczfit-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  client.py  html_parser.py  pyproject.toml  server.py
