[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maczfit-mcp"
version = "1.2.0"
description = "Local MCP server for managing Maczfit diet deliveries via natural language"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "requests",
    "python-dotenv",
]

[project.scripts]
maczfit-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py", "client.py", "html_parser.py"]
